# xfce4-wintitle-plugin

./: CMakeLists.txt  README.md  wintitle-dialogs.c  wintitle-dialogs.h  wintitle.c  wintitle.desktop  wintitle.h
common/: CMakeLists.txt
src/: wintitle-dialogs.c  wintitle.c  wintitle.h
