CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

PROJECT(xfce4-wintitle-plugin C)

SET(VERSION 0.0.1)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(Gettext REQUIRED)
include(GNUInstallDirs)

PKG_CHECK_MODULES(GTK3 REQUIRED libxfce4panel-2.0 libxfce4ui-2 libwnck-3.0)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(
	${GTK3_CFLAGS_OTHER} 
	-DWNCK_I_KNOW_THIS_IS_UNSTABLE=1
	)

ADD_LIBRARY(wintitle SHARED wintitle.c)

TARGET_LINK_LIBRARIES(wintitle ${GTK3_LIBRARIES})

INSTALL(TARGETS wintitle LIBRARY DESTINATION /usr/lib/xfce4/panel/plugins/)
INSTALL(FILES wintitle.desktop DESTINATION /usr/share/xfce4/panel/plugins/)
